# pyospackage

./: LICENSE.txt  pyproject.toml
src/pyospackage/: __about__.py  __init__.py  app.py
tests/: test_app.py
