[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyospackage-awong62"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Athena", email = "awong62@student.ubc.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Athena/pyospackage#readme"
Issues = "https://github.com/Athena/pyospackage/issues"
Source = "https://github.com/Athena/pyospackage"

[tool.hatch.version]
path = "src/pyospackage/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyospackage tests}"

[tool.coverage.run]
source_pkgs = ["pyospackage", "tests"]
branch = true
parallel = true
omit = [
  "src/pyospackage/__about__.py",
]

[tool.coverage.paths]
pyospackage = ["src/pyospackage", "*/pyospackage/src/pyospackage"]
tests = ["tests", "*/pyospackage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyospackage"]